Issue #104: Use omnisharp-roslyn
Omnisharp-roslyn now natively support LSP.
Replace the nodejs wrapper by Omnisharp-roslyn.

Signed-off-by: Mickael Istria <mistria@redhat.com>